# sylvia-iot-core

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
general-mq/: Cargo.toml  README.md
general-mq/examples/: simple.rs
general-mq/src/: connection.rs  lib.rs  queue.rs
general-mq/src/amqp/: connection.rs  mod.rs  queue.rs
general-mq/src/mqtt/: connection.rs  mod.rs  queue.rs  uri.rs
general-mq/tests/: integration_test.rs
general-mq/tests/amqp/: connection.rs  mod.rs  queue.rs
general-mq/tests/mqtt/: connection.rs  mod.rs  queue.rs
stress-simple/: Cargo.toml  config-mqtt.json  config-rasp.json  config.json
stress-simple/src/: main.rs
sylvia-iot-auth/: Cargo.toml  README.md
sylvia-iot-auth/doc/: api.md  schema.md
sylvia-iot-auth/src/: lib.rs
sylvia-iot-auth/src/libs/: config.rs
sylvia-iot-auth/src/models/: access_token.rs  authorization_code.rs  client.rs  login_session.rs  mod.rs  model_mongodb.rs  model_sqlite.rs  refresh_token.rs  user.rs
sylvia-iot-auth/src/models/mongodb/: access_token.rs  authorization_code.rs  client.rs  conn.rs  login_session.rs  mod.rs  refresh_token.rs  user.rs
sylvia-iot-auth/src/models/redis/: access_token.rs  authorization_code.rs  conn.rs  mod.rs  refresh_token.rs
sylvia-iot-auth/src/models/sqlite/: access_token.rs  authorization_code.rs  client.rs  login_session.rs  mod.rs  refresh_token.rs  user.rs
sylvia-iot-auth/src/routes/: mod.rs
sylvia-iot-auth/src/routes/oauth2/: api.rs  endpoint.rs  middleware.rs  mod.rs  primitive.rs  request.rs  response.rs  template.rs
sylvia-iot-auth/src/routes/v1/: mod.rs
sylvia-iot-auth/tests/: integration_test.rs
sylvia-iot-auth/tests/libs/: config.rs  mod.rs
sylvia-iot-auth/tests/models/: mod.rs
sylvia-iot-auth/tests/models/common/: access_token.rs  authorization_code.rs  client.rs  login_session.rs  mod.rs  refresh_token.rs  user.rs
sylvia-iot-auth/tests/models/mongodb/: access_token.rs  authorization_code.rs  client.rs  conn.rs  login_session.rs  mod.rs  refresh_token.rs  user.rs
sylvia-iot-auth/tests/models/redis/: access_token.rs  authorization_code.rs  conn.rs  mod.rs  refresh_token.rs
sylvia-iot-auth/tests/models/sqlite/: access_token.rs  authorization_code.rs  client.rs  conn.rs  login_session.rs  mod.rs  refresh_token.rs  user.rs
sylvia-iot-auth/tests/routes/: libs.rs  mod.rs
sylvia-iot-auth/tests/routes/oauth2/: api.rs  mod.rs  request.rs  response.rs
sylvia-iot-auth/tests/routes/v1/: libs.rs  mod.rs
sylvia-iot-broker/: Cargo.toml  README.md
sylvia-iot-broker/doc/: api.md  cache.md  message.md  schema.md
sylvia-iot-broker/src/: lib.rs
sylvia-iot-broker/src/libs/: config.rs
sylvia-iot-broker/src/libs/mq/: application.rs  control.rs  data.rs  mod.rs  network.rs
sylvia-iot-broker/src/models/: application.rs  cache_memory.rs  device.rs  device_route.rs  dldata_buffer.rs  mod.rs  model_mongodb.rs  model_sqlite.rs  network.rs  network_route.rs  unit.rs
sylvia-iot-broker/src/models/memory/: device.rs  device_route.rs  mod.rs  network_route.rs
sylvia-iot-broker/src/models/mongodb/: application.rs  conn.rs  device.rs  device_route.rs  dldata_buffer.rs  mod.rs  network.rs  network_route.rs  unit.rs
sylvia-iot-broker/src/models/sqlite/: application.rs  conn.rs  device.rs  device_route.rs  dldata_buffer.rs  mod.rs  network.rs  network_route.rs  unit.rs
sylvia-iot-broker/src/routes/: middleware.rs  mod.rs
sylvia-iot-broker/src/routes/v1/: lib.rs  mod.rs
sylvia-iot-broker/tests/: integration_test.rs
sylvia-iot-broker/tests/libs/: config.rs  libs.rs  mod.rs
sylvia-iot-broker/tests/libs/mq/: application.rs  control.rs  mod.rs  network.rs
sylvia-iot-broker/tests/models/: mod.rs
sylvia-iot-broker/tests/models/common/: application.rs  device.rs  device_route.rs  dldata_buffer.rs  mod.rs  network.rs  network_route.rs  unit.rs
sylvia-iot-broker/tests/models/memory/: device.rs  device_route.rs  mod.rs  network_route.rs
sylvia-iot-broker/tests/models/mongodb/: conn.rs  (+8 more)
sylvia-iot-broker/tests/routes/: libs.rs  middleware.rs  mod.rs
sylvia-iot-corelib/: Cargo.toml  README.md
sylvia-iot-corelib/src/: constants.rs  err.rs  http.rs  lib.rs  logger.rs  role.rs  server_config.rs  strings.rs  version.rs
sylvia-iot-corelib/tests/: integration_test.rs
sylvia-iot-corelib/tests/libs/: err.rs  http.rs  logger.rs  mod.rs  role.rs  server_config.rs  strings.rs  version.rs
sylvia-iot-coremgr/: Cargo.toml  README.md
sylvia-iot-coremgr-cli/: Cargo.toml  LICENSE  README.md
sylvia-iot-coremgr-cli/src/: lib.rs  main.rs
sylvia-iot-coremgr/doc/: api.md  message.md
sylvia-iot-coremgr/src/libs/: config.rs
sylvia-iot-coremgr/src/routes/: middleware.rs  mod.rs
sylvia-iot-coremgr/tests/: integration_test.rs
sylvia-iot-coremgr/tests/libs/: config.rs  mod.rs
sylvia-iot-coremgr/tests/routes/: libs.rs  middleware.rs  mod.rs
sylvia-iot-data/: Cargo.toml  README.md
sylvia-iot-data/doc/: api.md  schema.md
sylvia-iot-data/src/libs/: config.rs  mod.rs
sylvia-iot-data/src/models/: application_dldata.rs  application_uldata.rs  coremgr_opdata.rs  mod.rs  model_mongodb.rs  model_sqlite.rs  network_dldata.rs  network_uldata.rs
sylvia-iot-data/src/routes/: middleware.rs  mod.rs
sylvia-iot-data/tests/: integration_test.rs
sylvia-iot-data/tests/libs/: config.rs  mod.rs
sylvia-iot-data/tests/models/: mod.rs
sylvia-iot-data/tests/routes/: libs.rs  middleware.rs  mod.rs
sylvia-iot-sdk/: Cargo.toml  README.md
sylvia-iot-sdk/src/: lib.rs
sylvia-iot-sdk/src/api/: http.rs  mod.rs  user.rs
sylvia-iot-sdk/src/middlewares/: auth.rs
sylvia-iot-sdk/src/mq/: application.rs  mod.rs  network.rs
sylvia-iot-sdk/src/util/: mod.rs
sylvia-iot-sdk/tests/: integration_test.rs
sylvia-iot-sdk/tests/api/: http.rs  mod.rs  user.rs
sylvia-iot-sdk/tests/middlewares/: auth.rs  mod.rs
sylvia-iot-sdk/tests/mq/: application.rs  mod.rs  network.rs
sylvia-router/: Cargo.toml  README.md
sylvia-router/doc/: api.md
sylvia-router/src/: lib.rs
sylvia-router/src/libs/: config.rs  mod.rs  network.rs
sylvia-router/src/routes/: mod.rs
(+603 files in other folders)
