[package]
name = "general-mq"
version = "0.2.2"
authors = ["Chien-Hong Chan"]
categories = ["network-programming"]
description = "General purposed interfaces for message queues."
edition = "2021"
keywords = ["amqp", "mq", "mqtt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.75"

[dependencies]
amqprs = { version = "2.1.1", features = ["tls", "urispec"] }
async-trait = "0.1.88"
lapin = { version = "2.5.0", features = ["rustls"] }
rand = "0.9.1"
regex = "1.11.1"
rumqttc = "0.24.0"
tokio = { version = "1.45.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
url = "2.5.4"
urlencoding = "2.1.3"

[dev-dependencies]
laboratory = "2.0.0"
reqwest = { version = "0.12.15", default-features = false, features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.test]
incremental = true
