[package]
name = "general-mq"
version = "0.3.13"
authors = ["Chien-Hong Chan"]
categories = ["network-programming"]
description = "General purposed interfaces for message queues."
edition = "2024"
keywords = ["amqp", "mq", "mqtt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.88.0"

[dependencies]
amqprs = { version = "2.1.3", features = ["tls", "urispec"] }
async-trait = "0.1.89"
lapin = { version = "3.7.2", features = ["rustls"] }
rand = "0.9.2"
regex = "1.12.2"
rumqttc = "0.25.1"
tokio = { version = "1.48.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
url = "2.5.7"
urlencoding = "2.1.3"

[dev-dependencies]
laboratory = "2.0.0"
reqwest = { version = "0.12.26", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.test]
incremental = true
