[package]
name = "stress-simple"
version = "0.3.13"
authors = ["Chien-Hong Chan"]
edition = "2024"
description = "A very simple traffic generation program for testing Sylvia-IoT broker."

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42" }
general-mq = { path = "../general-mq" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }

[profile.release]
codegen-units = 1
lto = true
strip = true
