[package]
name = "sylvia-iot-auth"
version = "0.1.16"
authors = ["Chien-Hong Chan"]
categories = ["web-programming::http-server"]
description = "The authentication/authorization module of the Sylvia-IoT platform."
edition = "2021"
keywords = ["iot"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.75"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.83"
axum = "0.7.7"
axum-extra = { version = "0.9.4", default-features = false, features = [
    "tracing",
    "typed-header",
] }
axum-prometheus = "0.7.0"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
base64 = "0.22.1"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
clap = { version = "4.5.20", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
futures = "0.3.31"
json5 = "0.4.1"
log = "0.4.22"
mongodb = "3.1.0"
oxide-auth = "0.6.1"
oxide-auth-async = "0.2.1"
redis = { version = "0.27.5", features = ["tokio-comp"] }
rustls = "0.23.16"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_urlencoded = "0.7.1"
serde_with = { version = "3.11.0", features = ["json"] }
sql-builder = "3.1.1"
sqlx = { version = "0.8.2", default-features = false, features = [
    "macros",
    "runtime-tokio",
    "sqlite",
] }
sylvia-iot-corelib = { path = "../sylvia-iot-corelib" }
tera = "1.20.0"
tokio = { version = "1.41.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
tower = "0.5.1"
tower-http = { version = "0.6.1", default-features = false, features = [
    "cors",
    "fs",
    "normalize-path",
    "timeout",
] }
url = "2.5.2"

[dev-dependencies]
axum-test = "16.3.0"
laboratory = "2.0.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.test]
incremental = true
