[package]
name = "sylvia-iot-auth"
version = "0.4.1"
authors = ["Chien-Hong Chan"]
categories = ["web-programming::http-server"]
description = "The authentication/authorization module of the Sylvia-IoT platform."
edition = "2024"
keywords = ["iot"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.88.0"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = { version = "0.12.5", default-features = false, features = [
    "tracing",
    "typed-header",
] }
axum-prometheus = "0.10.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
base64 = "0.22.1"
bson = { version = "3.1.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.43", default-features = false, features = ["serde"] }
clap = { version = "4.5.54", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
futures = "0.3.31"
json5 = "1.3.0"
log = "0.4.29"
mongodb = { version = "3.5.0", default-features = false, features = [
    "bson-3",
    "compat-3-3-0",
    "dns-resolver",
    "rustls-tls",
] }
oxide-auth = "0.6.1"
oxide-auth-async = "0.2.1"
redis = { version = "1.0.2", features = ["tokio-comp"] }
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serde_with = { version = "3.16.1", features = ["json"] }
sql-builder = "3.1.1"
sqlx = { version = "0.8.6", default-features = false, features = [
    "macros",
    "runtime-tokio",
    "sqlite",
] }
sylvia-iot-corelib = "0.4.0"
tera = "1.20.1"
tokio = { version = "1.49.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
tower = "0.5.3"
tower-http = { version = "0.6.8", default-features = false, features = [
    "cors",
    "fs",
    "normalize-path",
    "timeout",
] }
url = "2.5.8"

[dev-dependencies]
axum-test = "18.6.0"
laboratory = "2.0.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.test]
incremental = true
