[package]
name = "sylvia-iot-broker"
version = "0.3.13"
authors = ["Chien-Hong Chan"]
categories = ["web-programming::http-server"]
description = "The message broker module of the Sylvia-IoT platform."
edition = "2024"
keywords = ["iot"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.88.0"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = "0.8.6"
axum-prometheus = "0.9.0"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
bson = { version = "3.0.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
clap = { version = "4.5.48", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
futures = "0.3.31"
general-mq = { path = "../general-mq" }
hex = "0.4.3"
json5 = "0.4.1"
log = "0.4.28"
lru = "0.16.1"
mongodb = { version = "3.3.0", default-features = false, features = [
    "bson-3",
    "compat-3-3-0",
    "dns-resolver",
    "rustls-tls",
] }
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rustls = "0.23.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sql-builder = "3.1.1"
sqlx = { version = "0.8.6", default-features = false, features = [
    "macros",
    "runtime-tokio",
    "sqlite",
] }
sylvia-iot-corelib = { path = "../sylvia-iot-corelib" }
tokio = { version = "1.47.1", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tower = "0.5.2"
tower-http = { version = "0.6.6", default-features = false, features = [
    "cors",
    "fs",
    "normalize-path",
    "timeout",
] }
url = "2.5.7"

[dev-dependencies]
axum-test = "18.1.0"
laboratory = "2.0.0"
serde_urlencoded = "0.7.1"
sylvia-iot-auth = { path = "../sylvia-iot-auth" }

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.test]
incremental = true
