[package]
name = "sylvia-iot-broker"
version = "0.4.3"
authors = ["Chien-Hong Chan"]
categories = ["web-programming::http-server"]
description = "The message broker module of the Sylvia-IoT platform."
edition = "2024"
keywords = ["iot"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.88.0"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = "0.8.8"
axum-prometheus = "0.10.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
bson = { version = "3.1.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.44", default-features = false, features = ["serde"] }
clap = { version = "4.5.60", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
futures = "0.3.32"
general-mq = "0.4.2"
hex = "0.4.3"
json5 = "1.3.1"
log = "0.4.29"
lru = "0.16.3"
mongodb = { version = "3.5.1", default-features = false, features = [
    "bson-3",
    "compat-3-3-0",
    "dns-resolver",
    "rustls-tls",
] }
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls",
] }
rustls = "0.23.37"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sql-builder = "3.1.1"
sqlx = { version = "0.8.6", default-features = false, features = [
    "macros",
    "runtime-tokio",
    "sqlite",
] }
sylvia-iot-corelib = "0.4.2"
tokio = { version = "1.49.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tower = "0.5.3"
tower-http = { version = "0.6.8", default-features = false, features = [
    "cors",
    "fs",
    "normalize-path",
    "timeout",
] }
url = "2.5.8"

[dev-dependencies]
axum-test = "19.0.0"
laboratory = "2.0.0"
serde_urlencoded = "0.7.1"
sylvia-iot-auth = "0.4.2"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.test]
incremental = true
