[package]
name = "sylvia-iot-corelib"
version = "0.2.2"
authors = ["Chien-Hong Chan"]
categories = ["web-programming::http-server"]
description = "Common libraries of Sylvia-IoT core modules."
edition = "2021"
keywords = ["iot"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.75"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.3"
bytes = "1.10.1"
chrono = { version = "0.4.40", default-features = false, features = ["serde"] }
clap = { version = "4.5.36", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.27"
log4rs = "1.3.0"
pbkdf2 = "0.12.2"
rand = "0.9.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tower = "0.5.2"
tower-layer = "0.3.3"
url = "2.5.4"

[dev-dependencies]
axum-test = "17.3.0"
laboratory = "2.0.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.test]
incremental = true
