[package]
name = "sylvia-iot-corelib"
version = "0.3.13"
authors = ["Chien-Hong Chan"]
categories = ["web-programming::http-server"]
description = "Common libraries of Sylvia-IoT core modules."
edition = "2024"
keywords = ["iot"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.7"
bytes = "1.11.0"
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
clap = { version = "4.5.53", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.28"
log4rs = "1.4.0"
pbkdf2 = "0.12.2"
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tower = "0.5.2"
tower-layer = "0.3.3"
url = "2.5.7"

[dev-dependencies]
axum-test = "18.2.1"
laboratory = "2.0.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.test]
incremental = true
