[package]
name = "sylvia-iot-coremgr-cli"
version = "0.3.13"
authors = ["Chien-Hong Chan"]
categories = ["web-programming::http-client"]
description = "The command-line tool for Sylvia-IoT core manager."
edition = "2024"
keywords = ["iot"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.88.0"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
clap = { version = "4.5.53", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
dirs = "6.0.0"
hex = "0.4.3"
json5 = "1.0.0"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
serde_with = { version = "3.16.1", features = ["json"] }
sylvia-iot-corelib = { path = "../sylvia-iot-corelib" }
tokio = { version = "1.48.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
url = "2.5.7"

[dev-dependencies]
laboratory = "2.0.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.test]
incremental = true
