[package]
name = "sylvia-iot-coremgr"
version = "0.1.15"
authors = ["Chien-Hong Chan"]
categories = ["web-programming::http-server"]
description = "The manager of Sylvia-IoT core modules."
edition = "2021"
keywords = ["iot"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.75"

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.83"
axum = "0.7.6"
axum-prometheus = "0.7.0"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
base64 = "0.22.1"
bytes = "1.7.2"
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
clap = { version = "4.5.18", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
csv = "1.3.0"
futures = "0.3.30"
futures-util = "0.3.30"
general-mq = { path = "../general-mq" }
hex = "0.4.3"
json5 = "0.4.1"
log = "0.4.22"
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
rumqttd = "0.19.0"
rustls = "0.23.13"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_urlencoded = "0.7.1"
sylvia-iot-auth = { path = "../sylvia-iot-auth" }
sylvia-iot-broker = { path = "../sylvia-iot-broker" }
sylvia-iot-corelib = { path = "../sylvia-iot-corelib" }
tokio = { version = "1.40.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
tower = "0.5.1"
tower-http = { version = "0.6.1", default-features = false, features = [
    "cors",
    "fs",
    "normalize-path",
    "timeout",
] }
url = "2.5.2"

[dev-dependencies]
axum-test = "16.0.0"
laboratory = "2.0.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.test]
incremental = true
