[package]
name = "sylvia-iot-coremgr"
version = "0.4.3"
authors = ["Chien-Hong Chan"]
categories = ["web-programming::http-server"]
description = "The manager of Sylvia-IoT core modules."
edition = "2024"
keywords = ["iot"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.88.0"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = "0.8.8"
axum-prometheus = "0.10.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.43", default-features = false, features = ["serde"] }
clap = { version = "4.5.60", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
csv = "1.4.0"
futures = "0.3.32"
futures-util = "0.3.32"
general-mq = { path = "../general-mq" }
hex = "0.4.3"
json5 = "1.3.1"
log = "0.4.29"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "query",
    "rustls",
    "stream",
] }
rumqttd = "0.20.0"
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sylvia-iot-auth = { path = "../sylvia-iot-auth" }
sylvia-iot-broker = { path = "../sylvia-iot-broker" }
sylvia-iot-corelib = { path = "../sylvia-iot-corelib" }
tokio = { version = "1.49.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
tower = "0.5.3"
tower-http = { version = "0.6.8", default-features = false, features = [
    "cors",
    "fs",
    "normalize-path",
    "timeout",
] }
url = "2.5.8"

[dev-dependencies]
axum-test = "18.7.0"
laboratory = "2.0.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.test]
incremental = true
