[package]
name = "sylvia-iot-sdk"
version = "0.3.13"
authors = ["Chien-Hong Chan"]
categories = ["web-programming::http-server"]
description = "SDK for developing networks (adapters) and applications on Sylvia-IoT."
edition = "2024"
keywords = ["iot"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.88.0"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.6"
bytes = "1.10.1"
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
futures = "0.3.31"
general-mq = { path = "../general-mq" }
hex = "0.4.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sylvia-iot-corelib = { path = "../sylvia-iot-corelib" }
tokio = { version = "1.48.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
tower = "0.5.2"
url = "2.5.7"

[dev-dependencies]
axum-test = "18.2.1"
laboratory = "2.0.0"
sylvia-iot-auth = { path = "../sylvia-iot-auth" }
sylvia-iot-broker = { path = "../sylvia-iot-broker" }
sylvia-iot-coremgr = { path = "../sylvia-iot-coremgr" }

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.test]
incremental = true
