[package]
name = "sylvia-iot-sdk"
version = "0.4.2"
authors = ["Chien-Hong Chan"]
categories = ["web-programming::http-server"]
description = "SDK for developing networks (adapters) and applications on Sylvia-IoT."
edition = "2024"
keywords = ["iot"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.88.0"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
bytes = "1.11.1"
chrono = { version = "0.4.43", default-features = false, features = ["serde"] }
futures = "0.3.31"
general-mq = "0.4.1"
hex = "0.4.3"
reqwest = { version = "0.13.1", default-features = false, features = [
    "form",
    "json",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sylvia-iot-corelib = "0.4.1"
tokio = { version = "1.49.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
tower = "0.5.3"
url = "2.5.8"

[dev-dependencies]
axum-test = "18.7.0"
laboratory = "2.0.0"
sylvia-iot-auth = "0.4.1"
sylvia-iot-broker = "0.4.1"
sylvia-iot-coremgr = "0.4.1"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.test]
incremental = true
