[package]
name = "sylvia-router"
version = "0.3.9"
authors = ["Chien-Hong Chan"]
categories = ["web-programming::http-server"]
description = "A simple router application with full Sylvia-IoT core components."
edition = "2024"
keywords = ["iot", "router"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.85.1"

[dependencies]
axum = "0.8.4"
axum-prometheus = "0.9.0"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
clap = { version = "4.5.47", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
ipnet = "2.11.0"
json5 = "0.4.1"
log = "0.4.28"
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rustls = "0.23.31"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
shell-escape = "0.1.5"
sylvia-iot-auth = "0.3.9"
sylvia-iot-broker = "0.3.9"
sylvia-iot-corelib = "0.3.9"
sylvia-iot-coremgr = "0.3.9"
sylvia-iot-coremgr-cli = "0.3.9"
sylvia-iot-data = "0.3.9"
sylvia-iot-sdk = "0.3.9"
sysinfo = "0.37.0"
tokio = { version = "1.47.1", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
tower = "0.5.2"
tower-http = { version = "0.6.6", default-features = false, features = [
    "cors",
    "fs",
    "normalize-path",
    "timeout",
] }

[profile.release]
codegen-units = 1
lto = true
strip = true
